// Copyright 2016 Blockchain Technology Partners 
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";

option java_multiple_files = true;
package com.blockchaintp.sawtooth.daml.protobuf;
import "google/protobuf/timestamp.proto";
import "com/digitalasset/daml/lf/transaction.proto";


message LedgerSyncEvent {
	string offset=1;
	google.protobuf.Timestamp recordTime=2;
}

message AcceptedTransaction {
/* begin must match LedgerSyncEvent */
	string offset=1;
	google.protobuf.Timestamp recordTime=2;
/* end must match LedgerSyncEvent */
	
	com.digitalasset.daml.lf.transaction.Transaction transaction=3;
	string transactionId=4;
	string submitter=5;
	google.protobuf.Timestamp ledgerEffectiveTime=6;
	string workflowId=7;
	string applicationId=8;
	string commandId=9;
	// TODO: need explicitDisclosure but we have to figure a way to represent the Relation
	
}

message RejectedCommand {
/* begin must match LedgerSyncEvent */
	string offset=1;
	google.protobuf.Timestamp recordTime=2;
/* end must match LedgerSyncEvent */
	reserved 3,4;
	string submitter=5;
	string rejectionReason=6;
	reserved 7;
	string applicationId=8;
	string commandId=9;
}

message Heartbeat {
/* begin must match LedgerSyncEvent */
	string offset=1;
	google.protobuf.Timestamp recordTime=2;
/* end must match LedgerSyncEvent */
}


